<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    
        <LinearLayout
	android:orientation="vertical" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent" 
	android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"  
        android:layout_marginBottom="5dip" 
        android:textSize="20.5sp" />

    <EditText
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" android:id="@+id/text_username">

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password" 
        android:layout_marginBottom="5dip" 
        android:textSize="20.5sp"/>

    <EditText
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword" 
        android:layout_marginBottom="5dip" android:id="@+id/text_password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_marginBottom="5dip"
        android:textSize="20.5sp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterText"  
        android:layout_marginBottom="5dip" 
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register" 
        android:layout_marginBottom="5dip"
        android:textSize="20.5sp"/>
       
        </LinearLayout>
</LinearLayout>