<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:text="@string/TextGroupCreate"
            android:textSize="16.5sp" />

        <EditText
            android:id="@+id/edittext_groupname"
            android:layout_width="187dp"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/text_groupdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please enter a description for your group" 
            android:textSize="16.5sp"/>

        <EditText
            android:id="@+id/edittext_groupdesc"
            android:layout_width="186dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_createNewGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:text="@string/ButtonCreateGroup"
            android:textSize="20.5sp" />
		
        <TextView
            android:id="@+id/textView_groupmessage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GroupMessage1" />
        
        <Button
        android:id="@+id/button_Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:text="Logout" />

    </LinearLayout>

</LinearLayout>